# byte

./: .gitignore  Cargo.toml  README.md  byte_emu-b55b3c5a99ef89ed.js  byte_emu-b55b3c5a99ef89ed_bg.wasm  index.html
.github/workflows/: rust.yml
byte_asm/: Cargo.toml
byte_common/: Cargo.toml  build.rs
byte_common/src/: lib.rs
byte_core/: Cargo.toml
byte_core/src/: bus.rs  cpu.rs
byte_core/tests/: 6502_functional_tests.rs  common.rs  instructions.rs
byte_emu/: Cargo.toml
byte_emu/src/: constants.rs  main.rs
byte_emu/src/app/: file_processor.rs  mod.rs
byte_emu/src/app/ui/: about.rs  byte_console.rs  code_editor.rs  emu_controls.rs  memory_monitor.rs  menu_bar.rs
byte_emu/src/emu/: bus.rs  core.rs  mod.rs
